gccida/c2/global_alloc
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/global_alloc/src/global.c:796:1: error: use of undeclared identifier '_OWORD'
_OWORD *v10; // rax 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/global_alloc/src/global.c:796:9: error: use of undeclared identifier 'v10'
_OWORD *v10; // rax 
        ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/global_alloc/src/global.c:981:4: error: expected ';' after expression
rtx regno_note; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/global_alloc/src/global.c:981:5: error: use of undeclared identifier 'regno_note'
rtx regno_note; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/global_alloc/src/global.c:1006:4: error: expected ';' after expression
rtx insns; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/global_alloc/src/global.c:1006:5: error: use of undeclared identifier 'insns'
rtx insns; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/global_alloc/src/global.c:1008:4: error: expected ';' after expression
rtx v222; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/global_alloc/src/global.c:1008:5: error: use of undeclared identifier 'v222'
rtx v222; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/global_alloc/src/global.c:1036:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v250; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/global_alloc/src/global.c:1148:36: error: use of undeclared identifier 'byte_98D96F'
if ( *( _BYTE *)( v3 + 9862847) || byte_98D96F[v3] ) 
                                   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/global_alloc/src/global.c:1200:1: error: use of undeclared identifier 'v10'
v10 = xmalloc( 4 * v5); 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/global_alloc/src/global.c:1201:15: error: use of undeclared identifier 'v10'
reg_allocno = v10; 
              ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/global_alloc/src/global.c:1202:2: error: use of undeclared identifier 'v10'; did you mean 'v120'?
*v10 = -1LL; 
 ^~~
 v120
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/global_alloc/src/global.c:906:20: note: 'v120' declared here
HARD_REG_ELT_TYPE *v120; // rdi 
                   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/global_alloc/src/global.c:1203:1: error: use of undeclared identifier 'v10'; did you mean 'v90'?
v10[1] = -1LL; 
^~~
v90
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/global_alloc/src/global.c:876:9: note: 'v90' declared here
__m128i v90; // xmm4 
        ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/global_alloc/src/global.c:1204:1: error: use of undeclared identifier 'v10'; did you mean 'v90'?
v10[2] = -1LL; 
^~~
v90
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/global_alloc/src/global.c:876:9: note: 'v90' declared here
__m128i v90; // xmm4 
        ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/global_alloc/src/global.c:1205:1: error: use of undeclared identifier 'v10'; did you mean 'v90'?
v10[3] = -1LL; 
^~~
v90
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/global_alloc/src/global.c:876:9: note: 'v90' declared here
__m128i v90; // xmm4 
        ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/global_alloc/src/global.c:1206:1: error: use of undeclared identifier 'v10'; did you mean 'v90'?
v10[4] = -1LL; 
^~~
v90
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/global_alloc/src/global.c:876:9: note: 'v90' declared here
__m128i v90; // xmm4 
        ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/global_alloc/src/global.c:1207:1: error: use of undeclared identifier 'v10'; did you mean 'v90'?
v10[5] = -1LL; 
^~~
v90
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/global_alloc/src/global.c:876:9: note: 'v90' declared here
__m128i v90; // xmm4 
        ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/global_alloc/src/global.c:1208:1: error: use of undeclared identifier 'v10'; did you mean 'v90'?
v10[6] = -1LL; 
^~~
v90
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/global_alloc/src/global.c:876:9: note: 'v90' declared here
__m128i v90; // xmm4 
        ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/global_alloc/src/obj/global.o] Error 1
